--- a/documentation.ipynb
+++ b/documentation.ipynb
@@ -9,22 +9,29 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 76,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "# Importing necessary libraries\n",
-    "# 1. Core Packages: dotenv, requests, httpx, and pymilvus.\n",
-    "# 2. LangChain and Extensions:\n",
-    "#     Langchain is used for processing language chains, and Milvus is the vector database for storing embeddings.\n",
-    "#     langchain: Core package.\n",
-    "#     langchain-core, langchain-mistralai, langchain-cohere, langchain-milvus, langchain-community, langchain-text-splitters, and langchain-huggingface for additional modules."
+    "1. Core Packages: dotenv, requests, httpx, and pymilvus.\n",
+    "2. LangChain and Extensions:\n",
+    "    * Langchain is used for processing language chains, and Milvus is the vector database for storing embeddings.\n",
+    "    * langchain: Core package.\n",
+    "    * langchain-core, langchain-mistralai, langchain-cohere, langchain-milvus, langchain-community, langchain-text-splitters, and langchain-huggingface for additional modules."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Importing necessary libraries\n",
+    "\n",
+    "Import the required libraries needed for the RAG"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -36,44 +43,29 @@
     }
    ],
    "source": [
-    "try:\n",
-    "    import os\n",
-    "    from dotenv import load_dotenv\n",
-    "    from langchain.chains.combine_documents import create_stuff_documents_chain\n",
-    "    from langchain.schema import Document\n",
-    "    from langchain_core.prompts import PromptTemplate\n",
-    "    from langchain_mistralai.chat_models import ChatMistralAI\n",
-    "    from langchain_milvus import Milvus\n",
-    "    from langchain_community.document_loaders import WebBaseLoader, RecursiveUrlLoader\n",
-    "    from langchain_text_splitters import RecursiveCharacterTextSplitter\n",
-    "    from langchain.chains import create_retrieval_chain\n",
-    "    from langchain_huggingface import HuggingFaceEmbeddings\n",
-    "    from pymilvus import connections, utility\n",
-    "    from requests.exceptions import HTTPError\n",
-    "    from httpx import HTTPStatusError\n",
-    "    import sqlite3\n",
-    "    import warnings\n",
-    "except ImportError:\n",
-    "    # Installing dependencies if not already installed\n",
-    "    !pip install os requests httpx pymilvus sqlite3\n",
-    "    !pip install langchain langchain-core langchain-mistralai langchain-cohere langchain-milvus langchain-community langchain-text-splitters langchain-huggingface\n",
-    "    # Imports for RAG and other functionality\n",
-    "    import os\n",
-    "    # from dotenv import load_dotenv\n",
-    "    from langchain.chains.combine_documents import create_stuff_documents_chain\n",
-    "    from langchain.schema import Document\n",
-    "    from langchain_core.prompts import PromptTemplate\n",
-    "    from langchain_mistralai.chat_models import ChatMistralAI\n",
-    "    from langchain_milvus import Milvus\n",
-    "    from langchain_community.document_loaders import WebBaseLoader, RecursiveUrlLoader\n",
-    "    from langchain_text_splitters import RecursiveCharacterTextSplitter\n",
-    "    from langchain.chains import create_retrieval_chain\n",
-    "    from langchain_huggingface import HuggingFaceEmbeddings\n",
-    "    from pymilvus import connections, utility\n",
-    "    from requests.exceptions import HTTPError\n",
-    "    from httpx import HTTPStatusError\n",
-    "    import sqlite3\n",
-    "    import warnings\n",
+    "\n",
+    "# Installing dependencies if not already installed\n",
+    "!pip install os requests httpx pymilvus sqlite3\n",
+    "!pip install langchain langchain-core langchain-mistralai langchain-cohere langchain-milvus langchain-community langchain-text-splitters langchain-huggingface\n",
+    "\n",
+    "import os\n",
+    "from dotenv import load_dotenv\n",
+    "from pymilvus import connections, utility\n",
+    "import sqlite3\n",
+    "\n",
+    "from langchain.chains.combine_documents import create_stuff_documents_chain\n",
+    "from langchain.schema import Document\n",
+    "from langchain_core.prompts import PromptTemplate\n",
+    "from langchain_mistralai.chat_models import ChatMistralAI\n",
+    "from langchain_milvus import Milvus\n",
+    "from langchain_community.document_loaders import WebBaseLoader, RecursiveUrlLoader\n",
+    "from langchain_text_splitters import RecursiveCharacterTextSplitter\n",
+    "from langchain.chains import create_retrieval_chain\n",
+    "from langchain_huggingface import HuggingFaceEmbeddings\n",
+    "\n",
+    "from requests.exceptions import HTTPError\n",
+    "from httpx import HTTPStatusError\n",
+    "import warnings\n",
     "\n",
     "warnings.filterwarnings('ignore')\n",
     "\n",
@@ -82,45 +74,44 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 87,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# API keys for Cohere and Mistral AI models\n",
-    "# Path to the Milvus database URI for storing vector embeddings\n",
-    "# The name of the transformer model to use for generating embeddings\n",
-    "# Extract the directory path from the URI and create it if it doesn't exist\n",
-    "# Establish a connection to the Milvus database\n",
-    "# Initialize the embedding function with the transformer model\n",
-    "# Initialize a RecursiveUrlLoader to load web documents while preventing \n",
-    "# navigation outside the specified base URL\n",
-    "# Initialize a vector store with the specified collection name, embedding function, and connection settings\n",
-    "# Create a text splitter to divide the documents into chunks of specified size with overlap\n",
-    "# Create a vector store from the documents, dropping any existing collection with the same name"
+    "# Load env variables\n",
+    "\n",
+    "Load the env variables needed for operation of the RAG. `CORPUS_SOURCE` can be changed to load a different corpus. `MISTRAL_API_KEY` contains the MistralAi API key. `MILVUS_URI` is the path for the milvus lite database file. `MODEL_NAME` is the embedding model used on the corpus"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Config vaiables and required functions loaded\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "CORPUS_SOURCE = 'https://www.csusb.edu/its'\n",
-    "COHERE_API_KEY='JPZrN72mRP2r9W5Dedo3Zk18VUS8voCHIPD7WLly'\n",
-    "MISTRAL_API_KEY='aCp49AkZAXNhTUgFziRT3Q8uO0GgWjBj'\n",
+    "MISTRAL_API_KEY = os.environ.get(\"MISTRAL_API_KEY\")\n",
     "MILVUS_URI = \"milvus/jupyter_milvus_vector.db\"\n",
-    "MODEL_NAME = \"sentence-transformers/all-MiniLM-L6-v2\"\n",
-    "\n",
+    "MODEL_NAME = \"sentence-transformers/all-MiniLM-L6-v2\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def vector_store_check(uri):\n",
+    "    \"\"\"\n",
+    "    Returns response on whether the milvus database exists\n",
+    "\n",
+    "    Returns:\n",
+    "        boolean\n",
+    "    \"\"\"\n",
     "    # Create the directory if it does not exist\n",
     "    head = os.path.split(uri)\n",
     "    os.makedirs(head[0], exist_ok=True)\n",
@@ -129,18 +120,42 @@
     "    connections.connect(\"default\",uri=uri)\n",
     "\n",
     "    # Return True if exists, False otherwise\n",
-    "    return utility.has_collection(\"IT_support\")\n",
-    "\n",
+    "    return utility.has_collection(\"IT_support\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def get_embedding_function():\n",
     "    \"\"\"\n",
-    "    returns embedding function for the model\n",
+    "    Returns embedding function for the model\n",
     "\n",
     "    Returns:\n",
     "        embedding function\n",
     "    \"\"\"\n",
     "    embedding_function = HuggingFaceEmbeddings(model_name=MODEL_NAME)\n",
-    "    return embedding_function\n",
-    "\n",
+    "    return embedding_function"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def load_documents_from_web():\n",
     "    \"\"\"\n",
     "    Load the documents from the web and store the page contents\n",
@@ -155,8 +170,20 @@
     "        )\n",
     "    documents = loader.load()\n",
     "    \n",
-    "    return documents\n",
-    "\n",
+    "    return documents"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def load_existing_db(uri=MILVUS_URI):\n",
     "    \"\"\"\n",
     "    Load an existing vector store from the local Milvus database specified by the URI.\n",
@@ -174,8 +201,20 @@
     "        connection_args={\"uri\": uri},\n",
     "    )\n",
     "    print(\"Vector Store Loaded\")\n",
-    "    return vector_store\n",
-    "\n",
+    "    return vector_store"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def split_documents(documents):\n",
     "    \"\"\"\n",
     "    Split the documents into chunks\n",
@@ -188,14 +227,26 @@
     "    \"\"\"\n",
     "    # Create a text splitter to split the documents into chunks\n",
     "    text_splitter = RecursiveCharacterTextSplitter(\n",
-    "        chunk_size=1000,  # Split the text into chunks of 1000 characters\n",
-    "        chunk_overlap=300,  # Overlap the chunks by 300 characters\n",
-    "        is_separator_regex=False,  # Don't split on regex\n",
+    "        chunk_size=1000,\n",
+    "        chunk_overlap=300,\n",
+    "        is_separator_regex=False,\n",
     "    )\n",
-    "    # Split the documents into chunks\n",
+    "    \n",
     "    docs = text_splitter.split_documents(documents)\n",
-    "    return docs\n",
-    "\n",
+    "    return docs"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def create_vector_store(docs, embeddings, uri):\n",
     "    \"\"\"\n",
     "    This function initializes a vector store using the provided documents and embeddings.\n",
@@ -216,11 +267,15 @@
     "        connection_args={\"uri\": uri},\n",
     "        drop_old=True,\n",
     "    )\n",
+    "    \n",
     "    print(\"Vector Store Created\")\n",
-    "    return vector_store\n",
-    "\n",
-    "print(\"Config vaiables and required functions loaded\")"
+    "    return vector_store"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
