--- a/documentation.ipynb
+++ b/documentation.ipynb
@@ -4,29 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Jupyter Notebook Interactive Mode Demo\n",
-    "This is a scripting page that prints actual raw data in Python."
+    "# Jupyter Notebook Interactive Mode Demo"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Importing necessary libraries\n",
-    "1. Core Packages: dotenv, requests, httpx, and pymilvus.\n",
-    "2. LangChain and Extensions:\n",
-    "    * Langchain is used for processing language chains, and Milvus is the vector database for storing embeddings.\n",
-    "    * langchain: Core package.\n",
-    "    * langchain-core, langchain-mistralai, langchain-cohere, langchain-milvus, langchain-community, langchain-text-splitters, and langchain-huggingface for additional modules."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Importing necessary libraries\n",
+    "### Importing necessary libraries\n",
     "\n",
-    "Import the required libraries needed for the RAG"
+    "Import the required libraries needed for the RAG. Core libraries are dotenv, requests, httpx, pymilvus, and langchain. Langchain extensions are core, mistralai, milvus, community, huggingface, and text-splitters."
    ]
   },
   {
@@ -55,10 +42,10 @@
     "\n",
     "from langchain.chains.combine_documents import create_stuff_documents_chain\n",
     "from langchain.schema import Document\n",
-    "from langchain_core.prompts import PromptTemplate\n",
+    "from langchain_core.prompts import ChatPromptTemplate\n",
     "from langchain_mistralai.chat_models import ChatMistralAI\n",
     "from langchain_milvus import Milvus\n",
-    "from langchain_community.document_loaders import WebBaseLoader, RecursiveUrlLoader\n",
+    "from langchain_community.document_loaders import RecursiveUrlLoader\n",
     "from langchain_text_splitters import RecursiveCharacterTextSplitter\n",
     "from langchain.chains import create_retrieval_chain\n",
     "from langchain_huggingface import HuggingFaceEmbeddings\n",
@@ -69,7 +56,6 @@
     "\n",
     "warnings.filterwarnings('ignore')\n",
     "\n",
-    "# Display to confirm successful import\n",
     "print(\"Dependencies imported successfully.\")"
    ]
   },
@@ -77,9 +63,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Load env variables\n",
+    "### Load env variables\n",
     "\n",
-    "Load the env variables needed for operation of the RAG. `CORPUS_SOURCE` can be changed to load a different corpus. `MISTRAL_API_KEY` contains the MistralAi API key. `MILVUS_URI` is the path for the milvus lite database file. `MODEL_NAME` is the embedding model used on the corpus"
+    "Load the env variables needed for operation of the RAG. `CORPUS_SOURCE` can be changed to load a different corpus. `MISTRAL_API_KEY` contains the MistralAi API key. `MILVUS_URI` is the path for the milvus lite database file. `MODEL_NAME` is the embedding model used on the corpus."
    ]
   },
   {
@@ -91,13 +77,19 @@
     "CORPUS_SOURCE = 'https://www.csusb.edu/its'\n",
     "MISTRAL_API_KEY = os.environ.get(\"MISTRAL_API_KEY\")\n",
     "MILVUS_URI = \"milvus/jupyter_milvus_vector.db\"\n",
-    "MODEL_NAME = \"sentence-transformers/all-MiniLM-L6-v2\""
+    "MODEL_NAME = \"sentence-transformers/all-MiniLM-L6-v2\"\n",
+    "\n",
+    "print(\"ENV variables defined.\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "### Function to create Vector Store (Milvus database)\n",
+    "\n",
+    "Creates the `/milvus` directory if it doesn't already exist. Attempts to connect to the database file. Return a boolean based on whether the database exists."
+   ]
   },
   {
    "cell_type": "code",
@@ -120,13 +112,19 @@
     "    connections.connect(\"default\",uri=uri)\n",
     "\n",
     "    # Return True if exists, False otherwise\n",
-    "    return utility.has_collection(\"IT_support\")"
+    "    return utility.has_collection(\"IT_support\")\n",
+    "\n",
+    "print(\"Function `vector_store_check` defined.\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "### Function to retrieve embedding function\n",
+    "\n",
+    "Gets to embedding function from HuggingFace based on the `MODEL_NAME` ENV variable. Returns the embedding model"
+   ]
   },
   {
    "cell_type": "code",
@@ -142,13 +140,21 @@
     "        embedding function\n",
     "    \"\"\"\n",
     "    embedding_function = HuggingFaceEmbeddings(model_name=MODEL_NAME)\n",
-    "    return embedding_function"
+    "\n",
+    "    print(\"Embedding function loaded.\")\n",
+    "    return embedding_function\n",
+    "\n",
+    "print(\"Function `get_embedding_function` defined.\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "### Function to load documents from the web\n",
+    "\n",
+    "Load documents from the web recursively based on `CORPUS_SOURCE`. Prevents loaded pages that are outside of the base_url of `CORPUS_SOURCE`. Returns the documents that are loaded."
+   ]
   },
   {
    "cell_type": "code",
@@ -170,13 +176,20 @@
     "        )\n",
     "    documents = loader.load()\n",
     "    \n",
-    "    return documents"
+    "    print(\"Documents loaded.\")\n",
+    "    return documents\n",
+    "\n",
+    "print(\"Function `load_documents_from_web` defined.\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "### Function to load existing vector store (Milvus database)\n",
+    "\n",
+    "Takes the path to the database and embedding function and connects to the database. Returns to connected vector store."
+   ]
   },
   {
    "cell_type": "code",
@@ -200,14 +213,21 @@
     "        embedding_function = get_embedding_function(),\n",
     "        connection_args={\"uri\": uri},\n",
     "    )\n",
-    "    print(\"Vector Store Loaded\")\n",
-    "    return vector_store"
+    "    \n",
+    "    print(\"Vector store loaded.\")\n",
+    "    return vector_store\n",
+    "\n",
+    "print(\"Function `load_existing_db` defined.\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "### Function to split documents\n",
+    "\n",
+    "Takes the documents loaded from `load_documents_from_web` and splits them into chunks of 1000 characters. Overlaps 300 characters to ensure no context is missing. Returns the documents split into chunks."
+   ]
   },
   {
    "cell_type": "code",
@@ -233,13 +253,21 @@
     "    )\n",
     "    \n",
     "    docs = text_splitter.split_documents(documents)\n",
-    "    return docs"
+    "    \n",
+    "    print(\"Documents successfully split.\")\n",
+    "    return docs\n",
+    "\n",
+    "print(\"Function `split_documents` defined.\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "### Function to create vector store (Milvus database)\n",
+    "\n",
+    "Takes the documents from `load_documents_from_web`, embedding function from `get_embedding_function`, and database path to create the vector store. Once it is created it returns the created vector store."
+   ]
   },
   {
    "cell_type": "code",
@@ -268,30 +296,24 @@
     "        drop_old=True,\n",
     "    )\n",
     "    \n",
-    "    print(\"Vector Store Created\")\n",
-    "    return vector_store"
+    "    print(\"Vector store created.\")\n",
+    "    return vector_store\n",
+    "\n",
+    "print(\"Function `create_vector_store` defined.\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 86,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "# Initialize a connection to the Milvus database with the specified collection name.\n",
-    "# \"IT_support\" is the collection that stores embeddings related to IT support queries.\n",
-    "# The `embedding_function` is a callable function that converts text to embeddings, \n",
-    "# ensuring the retrieved data is in the same vector format as expected for querying."
+    "# Base function to initialize Milvus\n",
+    "\n",
+    "Main function in initializing Milvus. Uses the previous functions to fully create the vector store. Running `initialize_milvus` will call all other functions needed to create the vector store."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -321,8 +343,28 @@
     "    \n",
     "        vector_store = create_vector_store(docs, embeddings, uri)\n",
     "\n",
+    "    print(\"Milvus successfully initialized.\")\n",
     "    return vector_store\n",
     "\n",
+    "print(\"Function `initialize_milvus` defined.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Initialize vector store (Milvus database)\n",
+    "\n",
+    "Due to the embedding function, this will take a significant amount of time. Please be patient until it completes."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"Starting Milvus initialization.\")\n",
     "initialize_milvus()"
    ]
   },
@@ -341,8 +383,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Function to create RAG prompt\n",
+    "\n",
+    "Define the `PROMPT_TEMPLATE` and assign the roles through `ChatPromptTemplate`. `<context>` tags contain the document context. `<question>` tags contain the user question."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -364,32 +415,24 @@
     "    \"\"\"\n",
     "    # Define the prompt template\n",
     "    PROMPT_TEMPLATE = \"\"\"\n",
-    "    Human: You are an AI assistant, and provides answers to questions by using fact based and statistical information when possible.\n",
-    "    Use the following pieces of information to provide a concise answer to the question enclosed in <question> tags.\n",
-    "    Only use the information provided in the <context> tags.\n",
-    "    If you don't know the answer, just say that you don't know, don't try to make up an answer.\n",
-    "    <context>\n",
-    "    {context}\n",
-    "    </context>\n",
+    "    You are an AI assistant that provides answers strictly based on the provided context. Adhere to these guidelines:\n",
+    "     - Only answer questions based on the content within the <context> tags.\n",
+    "     - If the <context> does not contain information related to the question, respond only with: \"I don't have enough information to answer this question.\"\n",
+    "     - For unclear questions or questions that lack specific context, request clarification from the user.\n",
+    "     - Provide specific, concise ansewrs. Where relevant information includes statistics or numbers, include them in the response.\n",
+    "     - Avoid adding any information, assumption, or external knowledge. Answer accurately within the scope of the given context and do not guess.\n",
+    "     - If information is missing, respond only with: \"I don't have enough information to answer this question.\"\n",
+    "    \"\"\"\n",
     "\n",
-    "    <question>\n",
-    "    {input}\n",
-    "    </question>\n",
+    "    prompt = ChatPromptTemplate.from_messages([\n",
+    "        (\"system\", PROMPT_TEMPLATE),\n",
+    "        (\"human\", \"<question>{input}</question>\\n\\n<context>{context}</context>\"),\n",
+    "    ])\n",
     "\n",
-    "    The response should be specific and use statistics or numbers when possible.\n",
-    "\n",
-    "    Assistant:\"\"\"\n",
-    "\n",
-    "    # Create a PromptTemplate instance with the defined template and input variables\n",
-    "    prompt = PromptTemplate(\n",
-    "        template=PROMPT_TEMPLATE, input_variables=[\"context\", \"question\"]\n",
-    "    )\n",
-    "    print(\"Prompt Created\")\n",
-    "\n",
-    "    # Return the created prompt template to be used with the RAG model\n",
+    "    print(\"Prompt template defined.\")\n",
     "    return prompt\n",
     "\n",
-    "print(create_prompt())"
+    "print(\"Function `create_prompt` defined.\")"
    ]
   },
   {
@@ -417,8 +460,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Function to query RAG model\n",
+    "\n",
+    "Loads the MistralAI model, prompt template, and vector store (Milvus database). Converts the vector store into a retriever, which will retrieve the documents containing context. Create a document chain containing all the documents with context. Create a retrieval_chain that uses the documents and retriever to load context based on user question. Based on the retrieved context documents, retrieve source metadata."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -477,12 +529,20 @@
     "    all_sources = all_sources[:-2] # remove the last comma and space\n",
     "    response[\"answer\"] += f\"\\n\\nSources: {all_sources}\"\n",
     "    print(\"------------------------------------------------------------------------\")\n",
-    "    print(\"Response Generated:\")\n",
+    "    print(\"Response Generated:\\n\")\n",
     "    \n",
     "    return response[\"answer\"]\n",
     "\n",
-    "response = query_rag(\"how to connect wifi\")\n",
-    "print(response)"
+    "print(\"Function `query_rag` defined.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Get response from RAG\n",
+    "\n",
+    "Send RAG a user question and get the RAG response. Print the response."
    ]
   },
   {
@@ -490,7 +550,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "response = query_rag(\"how do I connect to the wifi?\")\n",
+    "\n",
+    "print(response)"
+   ]
   }
  ],
  "metadata": {
