markdown error fix

--- a/documentation.ipynb
+++ b/documentation.ipynb
@@ -20,15 +20,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Dependencies imported successfully.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "# Installing dependencies if not already installed\n",
@@ -344,7 +336,7 @@
     "        vector_store = create_vector_store(docs, embeddings, uri)\n",
     "\n",
     "    print(\"Milvus successfully initialized.\")\n",
-    "    return vector_store\n",
+    "    #return vector_store\n",
     "\n",
     "print(\"Function `initialize_milvus` defined.\")"
    ]
@@ -369,20 +361,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 84,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Define the template for the prompt. This template provides the format and guidelines the AI assistant \n",
-    "# should follow when generating responses to user questions. The assistant is instructed to use only \n",
-    "# the information within the <context> tags, keeping answers fact-based and concise.\n",
-    "# Create an instance of PromptTemplate using the defined template. This instance enables the AI assistant \n",
-    "# to format responses according to the structure defined in PROMPT_TEMPLATE. The prompt accepts two input \n",
-    "# variables, 'context' and 'question', which are dynamically filled in when the prompt is used in a query."
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -395,16 +373,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Prompt Created\n",
-      "input_variables=['context', 'input'] template=\"\\n    Human: You are an AI assistant, and provides answers to questions by using fact based and statistical information when possible.\\n    Use the following pieces of information to provide a concise answer to the question enclosed in <question> tags.\\n    Only use the information provided in the <context> tags.\\n    If you don't know the answer, just say that you don't know, don't try to make up an answer.\\n    <context>\\n    {context}\\n    </context>\\n\\n    <question>\\n    {input}\\n    </question>\\n\\n    The response should be specific and use statistics or numbers when possible.\\n\\n    Assistant:\"\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def create_prompt():\n",
     "    \"\"\"\n",
@@ -414,7 +383,7 @@
     "        PromptTemplate: The prompt template for the RAG model\n",
     "    \"\"\"\n",
     "    # Define the prompt template\n",
-    "    PROMPT_TEMPLATE = \"\"\"\n",
+    "    PROMPT_TEMPLATE = \"\"\"\\\n",
     "    You are an AI assistant that provides answers strictly based on the provided context. Adhere to these guidelines:\n",
     "     - Only answer questions based on the content within the <context> tags.\n",
     "     - If the <context> does not contain information related to the question, respond only with: \"I don't have enough information to answer this question.\"\n",
@@ -433,30 +402,6 @@
     "    return prompt\n",
     "\n",
     "print(\"Function `create_prompt` defined.\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# This function sets up and runs a RAG model pipeline, integrating the following components:\n",
-    "\n",
-    "#     Model Initialization: Loads the ChatMistralAI model, which serves as the foundation for generating answers.\n",
-    "#     Prompt Creation: Creates a prompt template for the model.\n",
-    "#     Vector Store Loading: Loads the Milvus vector store to retrieve relevant document data.\n",
-    "#     Retriever Setup: Configures a retriever to find and return relevant documents from the vector store.\n",
-    "#     Document Chain and Retrieval Chain Creation: Sets up the chains that guide the RAG model through document processing and response generation.\n",
-    "# Workflow\n",
-    "#     Generate Response: The RAG model is invoked with the user query, generating an answer by leveraging the relevant documents.\n",
-    "#     Error Handling: Handles any HTTP errors, including rate limits, by returning appropriate messages.\n",
-    "#     Source Aggregation: Gathers and lists up to 4 unique sources relevant to the response, adding them as citations.\n",
-    "#     Response Return: The function returns the generated response, enriched with cited sources.\n",
-    "#     Arguments\n",
-    "#         query (str): The input query string from the user.\n",
-    "#     Returns\n",
-    "#         str: The generated answer to the query, including sources if available."
    ]
   },
   {
