--- a/documentation.ipynb
+++ b/documentation.ipynb
@@ -24,7 +24,7 @@
    "source": [
     "\n",
     "# Installing dependencies if not already installed\n",
-    "!pip install os requests httpx pymilvus sqlite3\n",
+    "!pip install requests httpx pymilvus sqlite3\n",
     "!pip install langchain langchain-core langchain-mistralai langchain-cohere langchain-milvus langchain-community langchain-text-splitters langchain-huggingface\n",
     "\n",
     "import os\n",
