--- a/documentation.ipynb
+++ b/documentation.ipynb
@@ -24,8 +24,8 @@
    "source": [
     "\n",
     "# Installing dependencies if not already installed\n",
-    "!pip install requests httpx pymilvus\n",
-    "!pip install langchain langchain-core langchain-mistralai langchain-cohere langchain-milvus langchain-community langchain-text-splitters langchain-huggingface\n",
+    "!pip install requests httpx pymilvus --root-user-action=ignore\n",
+    "!pip install langchain langchain-core langchain-mistralai langchain-cohere langchain-milvus langchain-community langchain-text-splitters langchain-huggingface --root-user-action=ignore\n",
     "\n",
     "import os\n",
     "from dotenv import load_dotenv\n",
