--- a/documentation.ipynb
+++ b/documentation.ipynb
@@ -11,9 +11,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Importing necessary libraries\n",
+    "### Importing required libraries\n",
     "\n",
-    "Import the required libraries needed for the RAG. Core libraries are dotenv, requests, httpx, pymilvus, and langchain. Langchain extensions are core, mistralai, milvus, community, huggingface, and text-splitters."
+    "Importing core libraries: dotenv for environment management, requests and httpx for HTTP requests, pymilvus for vector storage and langchain.Extensions of langchain include core, mistralai, milvus, community, text-splitters and huggingface."
    ]
   },
   {
@@ -55,9 +55,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Load env variables\n",
+    "### Setting up environment variables\n",
     "\n",
-    "Load the env variables needed for operation of the RAG. `CORPUS_SOURCE` can be changed to load a different corpus. `MISTRAL_API_KEY` contains the MistralAi API key. `MILVUS_URI` is the path for the milvus lite database file. `MODEL_NAME` is the embedding model used on the corpus."
+    "\n",
+    "Load the necessary environment variables for RAG operation. `CORPUS_SOURCE` can be modified to load a different corpus, `MISTRAL_API_KEY` stores the MistralAI API key, `MILVUS_URI` provides the path for the milvus lite database file, and `MODEL_NAME` specifies the embedding model for the corpus."
    ]
   },
   {
@@ -80,7 +81,7 @@
    "source": [
     "### Function to create Vector Store (Milvus database)\n",
     "\n",
-    "Creates the `/milvus` directory if it doesn't already exist. Attempts to connect to the database file. Return a boolean based on whether the database exists."
+    "Creates the `/milvus` directory if it doesn’t already exist, then attempts to connect to the database file. Returns a boolean indicating whether the database was successfully found."
    ]
   },
   {
@@ -113,9 +114,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Function to retrieve embedding function\n",
+    "### Function to fetch the embedding model\n",
     "\n",
-    "Gets to embedding function from HuggingFace based on the `MODEL_NAME` ENV variable. Returns the embedding model"
+    "Loads the embedding model from HuggingFace using the `MODEL_NAME` environment variable and returns the initialized embedding model."
    ]
   },
   {
@@ -143,9 +144,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Function to load documents from the web\n",
+    "### Function for loading documents from the web\n",
     "\n",
-    "Load documents from the web recursively based on `CORPUS_SOURCE`. Prevents loaded pages that are outside of the base_url of `CORPUS_SOURCE`. Returns the documents that are loaded."
+    "Recursively load documents from the web according to `CORPUS_SOURCE`, ensuring that only pages within the base_url of `CORPUS_SOURCE` are retrieved. The function returns the loaded documents."
    ]
   },
   {
@@ -180,7 +181,7 @@
    "source": [
     "### Function to load existing vector store (Milvus database)\n",
     "\n",
-    "Takes the path to the database and embedding function and connects to the database. Returns to connected vector store."
+    "Accepts the path to the database and embedding function to establish a connection with the database, returning the connected vector store."
    ]
   },
   {
@@ -218,7 +219,7 @@
    "source": [
     "### Function to split documents\n",
     "\n",
-    "Takes the documents loaded from `load_documents_from_web` and splits them into chunks of 1000 characters. Overlaps 300 characters to ensure no context is missing. Returns the documents split into chunks."
+    "Takes the documents loaded from `load_documents_from_web` and splits them into chunks of 1000 characters. Overlaps 300 characters to preserve context. Returns the documents split into chunks."
    ]
   },
   {
@@ -258,7 +259,7 @@
    "source": [
     "### Function to create vector store (Milvus database)\n",
     "\n",
-    "Takes the documents from `load_documents_from_web`, embedding function from `get_embedding_function`, and database path to create the vector store. Once it is created it returns the created vector store."
+    "Uses the documents retrieved from `load_documents_from_web`, the embedding function from `get_embedding_function`, and the database path to establish the vector store. It returns the vector store once it has been created."
    ]
   },
   {
@@ -298,9 +299,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Base function to initialize Milvus\n",
+    "# Core function for initializing Milvus\n",
     "\n",
-    "Main function in initializing Milvus. Uses the previous functions to fully create the vector store. Running `initialize_milvus` will call all other functions needed to create the vector store."
+    "This is the primary function for initializing Milvus, utilizing the previously defined functions to fully set up the vector store. Executing `initialize_milvus` will invoke all the necessary functions required for creating the vector store."
    ]
   },
   {
@@ -345,9 +346,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Initialize vector store (Milvus database)\n",
+    "### Initializing vector store (Milvus database)\n",
     "\n",
-    "Due to the embedding function, this will take a significant amount of time. Please be patient until it completes."
+    "This process may take a considerable amount of time due to the embedding function. Please be patient while it completes."
    ]
   },
   {
@@ -366,7 +367,7 @@
    "source": [
     "### Function to create RAG prompt\n",
     "\n",
-    "Define the `PROMPT_TEMPLATE` and assign the roles through `ChatPromptTemplate`. `<context>` tags contain the document context. `<question>` tags contain the user question."
+    "Define the `PROMPT_TEMPLATE` and assign roles using `ChatPromptTemplate`. The `<context>` tags represent the document context, while the `<question>` tags represent the user's question."
    ]
   },
   {
@@ -410,7 +411,7 @@
    "source": [
     "### Function to query RAG model\n",
     "\n",
-    "Loads the MistralAI model, prompt template, and vector store (Milvus database). Converts the vector store into a retriever, which will retrieve the documents containing context. Create a document chain containing all the documents with context. Create a retrieval_chain that uses the documents and retriever to load context based on user question. Based on the retrieved context documents, retrieve source metadata."
+    "Loads the MistralAI model, the prompt template, and the vector store (Milvus database). Converts the vector store into a retriever that fetches documents containing relevant context. Constructs a document chain that includes all context-related documents. Creates a retrieval chain that utilizes the documents and retriever to gather context based on the user's question. Additionally, retrieves source metadata from the context documents that have been fetched."
    ]
   },
   {
@@ -487,7 +488,7 @@
    "source": [
     "### Get response from RAG\n",
     "\n",
-    "Send RAG a user question and get the RAG response. Print the response."
+    "Send a question to RAG, retrieve the response, and print it."
    ]
   },
   {
